Fix video embed width on mobile - make 100% instead of centered

--- a/source/assets/css/common.css
+++ b/source/assets/css/common.css
@@ -1940,7 +1940,7 @@ article .blog-tags .tag {
 
 /* Video embed spacing improvements */
 .video-episode .content-embed-container {
-  margin: 3rem auto;
+  margin: 3rem 0;
   padding: 2rem 0;
   max-width: 100%;
 }
